syntax = "proto3";

                 package creatureAddon;
service CreatureAddonService {
 rpc createCreatureAddon (CreatureAddonCreateInput) returns (CreatureAddon) {}
rpc creatureAddons (findManyParams) returns (stream CreatureAddon) {}
rpc creatureAddon (CreatureAddonWhereUniqueInput) returns (CreatureAddon) {}
rpc updateCreatureAddon (CreatureAddonUpdateInput) returns (CreatureAddon) {}
rpc deleteCreatureAddon (CreatureAddonWhereUniqueInput) returns (CreatureAddon) {} 
 }
message CreatureAddonCreateInput {
int32 aiAnimKit = 1;
int32 animTier = 2;
string auras = 3;
string createdAt = 4;
int32 emote = 5;
int32 guid = 6;
string id = 7;
int32 meleeAnimKit = 8;
int32 mount = 9;
int32 mountCreatureId = 10;
int32 movementAnimKit = 11;
int32 pathId = 12;
int32 pvPFlags = 13;
int32 sheathState = 14;
int32 standState = 15;
string updatedAt = 16;
int32 visFlags = 17;
int32 visibilityDistanceType = 18;
};
message CreatureAddon {
int32 aiAnimKit = 1;
int32 animTier = 2;
string auras = 3;
string createdAt = 4;
int32 emote = 5;
int32 guid = 6;
string id = 7;
int32 meleeAnimKit = 8;
int32 mount = 9;
int32 mountCreatureId = 10;
int32 movementAnimKit = 11;
int32 pathId = 12;
int32 pvPFlags = 13;
int32 sheathState = 14;
int32 standState = 15;
string updatedAt = 16;
int32 visFlags = 17;
int32 visibilityDistanceType = 18;
};
message CreatureAddonWhereUniqueInput {
int32 aiAnimKit = 1;
int32 animTier = 2;
string auras = 3;
string createdAt = 4;
int32 emote = 5;
int32 guid = 6;
string id = 7;
int32 meleeAnimKit = 8;
int32 mount = 9;
int32 mountCreatureId = 10;
int32 movementAnimKit = 11;
int32 pathId = 12;
int32 pvPFlags = 13;
int32 sheathState = 14;
int32 standState = 15;
string updatedAt = 16;
int32 visFlags = 17;
int32 visibilityDistanceType = 18;
};
message CreatureAddonUpdateInput {
int32 aiAnimKit = 1;
int32 animTier = 2;
string auras = 3;
string createdAt = 4;
int32 emote = 5;
int32 guid = 6;
string id = 7;
int32 meleeAnimKit = 8;
int32 mount = 9;
int32 mountCreatureId = 10;
int32 movementAnimKit = 11;
int32 pathId = 12;
int32 pvPFlags = 13;
int32 sheathState = 14;
int32 standState = 15;
string updatedAt = 16;
int32 visFlags = 17;
int32 visibilityDistanceType = 18;
};
message findManyParams {

};